--- a/story/Info.plist
+++ b/story/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Privacy – Photo Library Usage Description</key>
+	<string>APP需要取用您的相簿</string>
+	<key>Privacy – Camera Usage Description</key>
+	<string>APP需要取用您的相機</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
